support for markdown description fixed section bugs

--- a/css/common.less
+++ b/css/common.less
@@ -23,9 +23,20 @@
   vertical-align: middle;
 }
 
+.panel-footer-sm {
+  padding: 2px;
+  font-size: x-small;
+  text-align: left;
+}
+
 label {
   font-weight: normal;
   margin-bottom: 0;
+}
+
+textarea {
+  resize: vertical;
+  overflow: auto;
 }
 
 html {
