--- a/css/edit.less
+++ b/css/edit.less
@@ -1,5 +1,19 @@
 @import "algorithm";
 
+#infoPanel {
+  .description-group {
+    margin-bottom: 5px;
+    #in-long {
+      font-family: "andale mono", "monotype.com", "courier new", courier, monospace;
+      margin-top: 7px;
+    }
+  }
+  #refresh-preview {
+    color: darkgray;
+    cursor: pointer;
+  }
+}
+
 #varPanel {
   .variables {
     margin-top: 0;
