some tiny fixes

--- a/css/edit.less
+++ b/css/edit.less
@@ -8,8 +8,11 @@
       margin-top: 7px;
     }
   }
+  #description-preview {
+    color: #6c6c6c;
+  }
   #refresh-preview {
-    color: darkgray;
+    color: #6c6c6c;
     cursor: pointer;
   }
 }
