--- a/css/edit.less
+++ b/css/edit.less
@@ -72,9 +72,6 @@
     .btnStyle(@color) {
       background-color: lighten(@color, 10%);
     }
-    #btn-add-arithmetic {
-      .btnStyle(@arithmetic-node-color);
-    }
     #btn-add-assign {
       .btnStyle(@assign-node-color);
     }
@@ -89,6 +86,9 @@
     }
     #btn-add-inc {
       .btnStyle(@inc-node-color);
+    }
+    #btn-add-swap {
+      .btnStyle(@swap-node-color);
     }
     #btn-add-value {
       .btnStyle(@value-node-color);
