--- a/partials/edit.phtml
+++ b/partials/edit.phtml
@@ -103,7 +103,7 @@ if ($__aid && $__uid && $__owner) {
 
                 <!-- TAB - VARIABLES -->
                 <div class="panel panel-default">
-                    <div class="panel-heading" data-target="#varPanel" data-speed="500">
+                    <div class="panel-heading" data-target="#varPanel">
                         <h4 class="panel-title">
                             <span class="glyphicon glyphicon-chevron-down"></span>
                             <?= $l10n['variables'] ?>
