--- a/css/mixins.less
+++ b/css/mixins.less
@@ -1,3 +1,9 @@
+.border-radius (@radius) {
+  -moz-border-radius: @radius;
+  -webkit-border-radius: @radius;
+  border-radius: @radius;
+}
+
 .border-top-right-radius (@radius) {
   -moz-border-radius-topright: @radius;
   -webkit-border-top-right-radius: @radius;
