introduced logic values

--- a/partials/view.phtml
+++ b/partials/view.phtml
@@ -284,11 +284,11 @@ if ($__aid && $__algorithm && ($__public || $__owner)):
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td><?= $l10n['arithmetic'] ?></td>
+                                    <td><?= $l10n['arithmetic'] ?><br/><?= $l10n['logic'] ?></td>
                                     <td>
                                         <div class="btn-group">
                                             <input type="button" class="btn btn-default" disabled="disabled" value="0"
-                                                   id="stats-arithmetic"/>
+                                                   id="stats-arithmeticLogic"/>
                                         </div>
                                     </td>
                                 </tr>
