--- a/partials/view.phtml
+++ b/partials/view.phtml
@@ -93,7 +93,7 @@ if ($__aid && $__algorithm && ($__public || $__owner)):
                                 </div>
                             </div>
                             <div class="col-md-7">
-                                <div class="panel panel-default">
+                                <div class="panel panel-default" style="display: none;">
                                     <div class="panel-body">
                                         <span style="color: grey"><?= $l10n['no_params_to_define'] ?></span>
                                     </div>
